--- a/front.html
+++ b/front.html
@@ -12,7 +12,7 @@
 
 	<!-- Load styles -->
 	<!-- For production, combine all of the stylesheets -->
-	<link rel="stylesheet" href="css/index.css">
+	<link rel="stylesheet" href="css/front.css">
 	
 	<!-- pull in webfonts -->
 	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
@@ -30,7 +30,7 @@
 <h3>a blog</h3>
 
 <ul>
-  <li><a class="active" href="index.html">Home</a></li>
+  <li><a class="active" href="front.html">Home</a></li>
 
   <li class="dropdown">
     <a href="javascript:void(0)" class="dropbtn">Videography</a>
