--- a/index.html
+++ b/index.html
@@ -35,55 +35,55 @@
   <li class="dropdown">
     <a href="javascript:void(0)" class="dropbtn">Videography</a>
     <div class="dropdown-content">
-      <a href="_posts/default.html">Week 1</a>
-      <a href="_posts/video2.html">Week 2</a>
-      <a href="_posts/video3.html">Week 3</a>
-      <a href="_posts/video4.html">Week 4</a>
-      <a href="_posts/video5.html">Week 5</a>
+      <a href="posts/default.html">Week 1</a>
+      <a href="posts/video2.html">Week 2</a>
+      <a href="posts/video3.html">Week 3</a>
+      <a href="posts/video4.html">Week 4</a>
+      <a href="posts/video5.html">Week 5</a>
     </div>
   </li>
 
   <li class="dropdown">
     <a href="javascript:void(0)" class="dropbtn">Photography</a>
     <div class="dropdown-content">
-      <a href="_posts/photo1.html">Week 1</a>
-      <a href="_posts/photo2.html">Week 2</a>
-      <a href="_posts/photo3.html">Week 3</a>
-      <a href="_posts/photo4.html">Week 4</a>
-      <a href="_posts/photo5.html">Week 5</a>
+      <a href="posts/photo1.html">Week 1</a>
+      <a href="posts/photo2.html">Week 2</a>
+      <a href="posts/photo3.html">Week 3</a>
+      <a href="posts/photo4.html">Week 4</a>
+      <a href="posts/photo5.html">Week 5</a>
     </div>
   </li>
 
   <li class="dropdown">
     <a href="javascript:void(0)" class="dropbtn">Articles</a>
     <div class="dropdown-content">
-      <a href="_posts/article1.html">Week 1</a>
-      <a href="_posts/article2.html">Week 2</a>
-      <a href="_posts/article3.html">Week 3</a>
-      <a href="_posts/article4.html">Week 4</a>
-      <a href="_posts/article5.html">Week 5</a>
+      <a href="posts/article1.html">Week 1</a>
+      <a href="posts/article2.html">Week 2</a>
+      <a href="posts/article3.html">Week 3</a>
+      <a href="posts/article4.html">Week 4</a>
+      <a href="posts/article5.html">Week 5</a>
     </div>
   </li>
 
   <li class="dropdown">
     <a href="javascript:void(0)" class="dropbtn">Essays</a>
     <div class="dropdown-content">
-      <a href="_posts/essay1.html">Week 1</a>
-      <a href="_posts/essay2.html">Week 2</a>
-      <a href="_posts/essay3.html">Week 3</a>
-      <a href="_posts/essay4.html">Week 4</a>
-      <a href="_posts/essay5.html">Week 5</a>
+      <a href="posts/essay1.html">Week 1</a>
+      <a href="posts/essay2.html">Week 2</a>
+      <a href="posts/essay3.html">Week 3</a>
+      <a href="posts/essay4.html">Week 4</a>
+      <a href="posts/essay5.html">Week 5</a>
     </div>
   </li>
 
   <li class="dropdown">
     <a href="javascript:void(0)" class="dropbtn">People</a>
     <div class="dropdown-content">
-      <a href="_posts/people1.html">Week 1</a>
-      <a href="_posts/people2.html">Week 2</a>
-      <a href="_posts/people3.html">Week 3</a>
-      <a href="_posts/people4.html">Week 4</a>
-      <a href="_posts/people5.html">Week 5</a>
+      <a href="posts/people1.html">Week 1</a>
+      <a href="posts/people2.html">Week 2</a>
+      <a href="posts/people3.html">Week 3</a>
+      <a href="posts/people4.html">Week 4</a>
+      <a href="posts/people5.html">Week 5</a>
     </div>
   </li>
 
